// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse could override default openMotion 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-collapse dcloud-collapse-icon-position-left"
  >
    <div
      class="dcloud-collapse-item dcloud-collapse-item-active"
    >
      <div
        aria-expanded="true"
        class="dcloud-collapse-header"
        role="button"
        tabindex="0"
      >
        <div>
          <span
            aria-label="right"
            class="anticon anticon-right dcloud-collapse-arrow"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="right"
              fill="currentColor"
              focusable="false"
              height="1em"
              style="transform: rotate(90deg);"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
              />
            </svg>
          </span>
        </div>
        This is panel header 1
      </div>
      <div
        class="dcloud-collapse-content dcloud-collapse-content-active"
      >
        <div
          class="dcloud-collapse-content-box"
        >
          content
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Collapse should render extra node of panel 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-collapse dcloud-collapse-icon-position-left"
  >
    <div
      class="dcloud-collapse-item"
    >
      <div
        aria-expanded="false"
        class="dcloud-collapse-header"
        role="button"
        tabindex="0"
      >
        <div>
          <span
            aria-label="right"
            class="anticon anticon-right dcloud-collapse-arrow"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="right"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
              />
            </svg>
          </span>
        </div>
        header
        <div
          class="dcloud-collapse-extra"
        >
          <button
            type="button"
          >
            action
          </button>
        </div>
      </div>
    </div>
    <div
      class="dcloud-collapse-item"
    >
      <div
        aria-expanded="false"
        class="dcloud-collapse-header"
        role="button"
        tabindex="0"
      >
        <div>
          <span
            aria-label="right"
            class="anticon anticon-right dcloud-collapse-arrow"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="right"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
              />
            </svg>
          </span>
        </div>
        header
        <div
          class="dcloud-collapse-extra"
        >
          <button
            type="button"
          >
            action
          </button>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Collapse should support remove expandIcon 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-collapse dcloud-collapse-icon-position-left"
  >
    <div
      class="dcloud-collapse-item"
    >
      <div
        aria-expanded="false"
        class="dcloud-collapse-header"
        role="button"
        tabindex="0"
      >
        <div />
        header
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
